# SortingAlgorithm

./: .gitmodules  CMakeLists.txt  README.md  setup.sh
cmake/: FindCXXOPT.cmake
data/: .gitignore
include/: CMakeLists.txt  FileIO.cc  FileIO.h  InputHandler.cc  InputHandler.h  Utilities.h
src/: CMakeLists.txt  datasorter.cc
